tests/snapshots/tokenize__ctype_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "extern at 4:1\nint at 4:8\nIdentifier(isalnum) at 4:12\n( at 4:19\nint at 4:20\nIdentifier(c) at 4:24\n) at 4:25\n; at 4:26\nextern at 5:1\nint at 5:8\nIdentifier(isalpha) at 5:12\n( at 5:19\nint at 5:20\nIdentifier(c) at 5:24\n) at 5:25\n; at 5:26\nextern at 6:1\nint at 6:8\nIdentifier(iscntrl) at 6:12\n( at 6:19\nint at 6:20\nIdentifier(c) at 6:24\n) at 6:25\n; at 6:26\nextern at 7:1\nint at 7:8\nIdentifier(isdigit) at 7:12\n( at 7:19\nint at 7:20\nIdentifier(c) at 7:24\n) at 7:25\n; at 7:26\nextern at 8:1\nint at 8:8\nIdentifier(isgraph) at 8:12\n( at 8:19\nint at 8:20\nIdentifier(c) at 8:24\n) at 8:25\n; at 8:26\nextern at 9:1\nint at 9:8\nIdentifier(islower) at 9:12\n( at 9:19\nint at 9:20\nIdentifier(c) at 9:24\n) at 9:25\n; at 9:26\nextern at 10:1\nint at 10:8\nIdentifier(isprint) at 10:12\n( at 10:19\nint at 10:20\nIdentifier(c) at 10:24\n) at 10:25\n; at 10:26\nextern at 11:1\nint at 11:8\nIdentifier(ispunct) at 11:12\n( at 11:19\nint at 11:20\nIdentifier(c) at 11:24\n) at 11:25\n; at 11:26\nextern at 12:1\nint at 12:8\nIdentifier(isspace) at 12:12\n( at 12:19\nint at 12:20\nIdentifier(c) at 12:24\n) at 12:25\n; at 12:26\nextern at 13:1\nint at 13:8\nIdentifier(isupper) at 13:12\n( at 13:19\nint at 13:20\nIdentifier(c) at 13:24\n) at 13:25\n; at 13:26\nextern at 14:1\nint at 14:8\nIdentifier(isxdigit) at 14:12\n( at 14:20\nint at 14:21\nIdentifier(c) at 14:25\n) at 14:26\n; at 14:27\nextern at 17:1\nint at 17:8\nIdentifier(tolower) at 17:12\n( at 17:19\nint at 17:20\nIdentifier(c) at 17:24\n) at 17:25\n; at 17:26\nextern at 18:1\nint at 18:8\nIdentifier(toupper) at 18:12\n( at 18:19\nint at 18:20\nIdentifier(c) at 18:24\n) at 18:25\n; at 18:26\nint at 21:1\nIdentifier(main) at 21:5\n( at 21:9\n) at 21:10\n{ at 21:12\nint at 22:5\nIdentifier(result) at 22:9\n= at 22:16\nIntLiteral(0, None) at 22:18\n; at 22:19\nif at 25:5\n( at 25:8\nIdentifier(isdigit) at 25:9\n( at 25:16\nCharLiteral(53) at 25:17\n) at 25:20\n) at 25:21\n{ at 25:23\nIdentifier(result) at 26:9\n= at 26:16\nIdentifier(result) at 26:18\n+ at 26:25\nIntLiteral(1, None) at 26:27\n; at 26:28\n} at 27:5\nif at 28:5\n( at 28:8\n! at 28:9\nIdentifier(isdigit) at 28:10\n( at 28:17\nCharLiteral(97) at 28:18\n) at 28:21\n) at 28:22\n{ at 28:24\nIdentifier(result) at 29:9\n= at 29:16\nIdentifier(result) at 29:18\n+ at 29:25\nIntLiteral(1, None) at 29:27\n; at 29:28\n} at 30:5\nif at 33:5\n( at 33:8\nIdentifier(isalpha) at 33:9\n( at 33:16\nCharLiteral(120) at 33:17\n) at 33:20\n) at 33:21\n{ at 33:23\nIdentifier(result) at 34:9\n= at 34:16\nIdentifier(result) at 34:18\n+ at 34:25\nIntLiteral(1, None) at 34:27\n; at 34:28\n} at 35:5\nif at 36:5\n( at 36:8\n! at 36:9\nIdentifier(isalpha) at 36:10\n( at 36:17\nCharLiteral(57) at 36:18\n) at 36:21\n) at 36:22\n{ at 36:24\nIdentifier(result) at 37:9\n= at 37:16\nIdentifier(result) at 37:18\n+ at 37:25\nIntLiteral(1, None) at 37:27\n; at 37:28\n} at 38:5\nif at 41:5\n( at 41:8\nIdentifier(isupper) at 41:9\n( at 41:16\nCharLiteral(65) at 41:17\n) at 41:20\n) at 41:21\n{ at 41:23\nIdentifier(result) at 42:9\n= at 42:16\nIdentifier(result) at 42:18\n+ at 42:25\nIntLiteral(1, None) at 42:27\n; at 42:28\n} at 43:5\nif at 44:5\n( at 44:8\n! at 44:9\nIdentifier(isupper) at 44:10\n( at 44:17\nCharLiteral(98) at 44:18\n) at 44:21\n) at 44:22\n{ at 44:24\nIdentifier(result) at 45:9\n= at 45:16\nIdentifier(result) at 45:18\n+ at 45:25\nIntLiteral(1, None) at 45:27\n; at 45:28\n} at 46:5\nif at 49:5\n( at 49:8\nIdentifier(islower) at 49:9\n( at 49:16\nCharLiteral(122) at 49:17\n) at 49:20\n) at 49:21\n{ at 49:23\nIdentifier(result) at 50:9\n= at 50:16\nIdentifier(result) at 50:18\n+ at 50:25\nIntLiteral(1, None) at 50:27\n; at 50:28\n} at 51:5\nif at 52:5\n( at 52:8\n! at 52:9\nIdentifier(islower) at 52:10\n( at 52:17\nCharLiteral(90) at 52:18\n) at 52:21\n) at 52:22\n{ at 52:24\nIdentifier(result) at 53:9\n= at 53:16\nIdentifier(result) at 53:18\n+ at 53:25\nIntLiteral(1, None) at 53:27\n; at 53:28\n} at 54:5\nif at 57:5\n( at 57:8\nIdentifier(isspace) at 57:9\n( at 57:16\nCharLiteral(32) at 57:17\n) at 57:20\n) at 57:21\n{ at 57:23\nIdentifier(result) at 58:9\n= at 58:16\nIdentifier(result) at 58:18\n+ at 58:25\nIntLiteral(1, None) at 58:27\n; at 58:28\n} at 59:5\nif at 60:5\n( at 60:8\n! at 60:9\nIdentifier(isspace) at 60:10\n( at 60:17\nCharLiteral(120) at 60:18\n) at 60:21\n) at 60:22\n{ at 60:24\nIdentifier(result) at 61:9\n= at 61:16\nIdentifier(result) at 61:18\n+ at 61:25\nIntLiteral(1, None) at 61:27\n; at 61:28\n} at 62:5\nint at 65:5\nIdentifier(upper) at 65:9\n= at 65:15\nIdentifier(toupper) at 65:17\n( at 65:24\nCharLiteral(97) at 65:25\n) at 65:28\n; at 65:29\nif at 66:5\n( at 66:8\nIdentifier(upper) at 66:9\n== at 66:15\nCharLiteral(65) at 66:18\n) at 66:21\n{ at 66:23\nIdentifier(result) at 67:9\n= at 67:16\nIdentifier(result) at 67:18\n+ at 67:25\nIntLiteral(1, None) at 67:27\n; at 67:28\n} at 68:5\nint at 71:5\nIdentifier(lower) at 71:9\n= at 71:15\nIdentifier(tolower) at 71:17\n( at 71:24\nCharLiteral(66) at 71:25\n) at 71:28\n; at 71:29\nif at 72:5\n( at 72:8\nIdentifier(lower) at 72:9\n== at 72:15\nCharLiteral(98) at 72:18\n) at 72:21\n{ at 72:23\nIdentifier(result) at 73:9\n= at 73:16\nIdentifier(result) at 73:18\n+ at 73:25\nIntLiteral(1, None) at 73:27\n; at 73:28\n} at 74:5\nreturn at 77:5\nIdentifier(result) at 77:12\n; at 77:18\n} at 78:1\nEOF at 79:1\n"
stderr: ""
status: 0
