tests/snapshots/tokenize__decl.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nint at 15:1\nIdentifier(main) at 15:5\n( at 15:9\n) at 15:10\n{ at 15:12\nIdentifier(assert) at 16:3\n( at 16:9\nIntLiteral(1, None) at 16:10\n, at 16:11\n( at 16:13\n{ at 16:14\nchar at 16:16\nIdentifier(x) at 16:21\n; at 16:22\nsizeof at 16:24\n( at 16:30\nIdentifier(x) at 16:31\n) at 16:32\n; at 16:33\n} at 16:35\n) at 16:36\n, at 16:37\nStringLiteral(\"({ char 1; sizeof(1); })\") at 16:39\n) at 16:65\n; at 16:66\nIdentifier(assert) at 17:3\n( at 17:9\nIntLiteral(2, None) at 17:10\n, at 17:11\n( at 17:13\n{ at 17:14\nshort at 17:16\nint at 17:22\nIdentifier(x) at 17:26\n; at 17:27\nsizeof at 17:29\n( at 17:35\nIdentifier(x) at 17:36\n) at 17:37\n; at 17:38\n} at 17:40\n) at 17:41\n, at 17:42\nStringLiteral(\"({ short int 2; sizeof(2); })\") at 17:44\n) at 17:75\n; at 17:76\nIdentifier(assert) at 18:3\n( at 18:9\nIntLiteral(2, None) at 18:10\n, at 18:11\n( at 18:13\n{ at 18:14\nint at 18:16\nshort at 18:20\nIdentifier(x) at 18:26\n; at 18:27\nsizeof at 18:29\n( at 18:35\nIdentifier(x) at 18:36\n) at 18:37\n; at 18:38\n} at 18:40\n) at 18:41\n, at 18:42\nStringLiteral(\"({ int short 2; sizeof(2); })\") at 18:44\n) at 18:75\n; at 18:76\nIdentifier(assert) at 19:3\n( at 19:9\nIntLiteral(4, None) at 19:10\n, at 19:11\n( at 19:13\n{ at 19:14\nint at 19:16\nIdentifier(x) at 19:20\n; at 19:21\nsizeof at 19:23\n( at 19:29\nIdentifier(x) at 19:30\n) at 19:31\n; at 19:32\n} at 19:34\n) at 19:35\n, at 19:36\nStringLiteral(\"({ int 4; sizeof(4); })\") at 19:38\n) at 19:63\n; at 19:64\nIdentifier(assert) at 20:3\n( at 20:9\nIntLiteral(8, None) at 20:10\n, at 20:11\n( at 20:13\n{ at 20:14\nlong at 20:16\nint at 20:21\nIdentifier(x) at 20:25\n; at 20:26\nsizeof at 20:28\n( at 20:34\nIdentifier(x) at 20:35\n) at 20:36\n; at 20:37\n} at 20:39\n) at 20:40\n, at 20:41\nStringLiteral(\"({ long int 8; sizeof(8); })\") at 20:43\n) at 20:73\n; at 20:74\nIdentifier(assert) at 21:3\n( at 21:9\nIntLiteral(8, None) at 21:10\n, at 21:11\n( at 21:13\n{ at 21:14\nint at 21:16\nlong at 21:20\nIdentifier(x) at 21:25\n; at 21:26\nsizeof at 21:28\n( at 21:34\nIdentifier(x) at 21:35\n) at 21:36\n; at 21:37\n} at 21:39\n) at 21:40\n, at 21:41\nStringLiteral(\"({ int long 8; sizeof(8); })\") at 21:43\n) at 21:73\n; at 21:74\nIdentifier(assert) at 23:3\n( at 23:9\nIntLiteral(8, None) at 23:10\n, at 23:11\n( at 23:13\n{ at 23:14\nlong at 23:16\nlong at 23:21\nIdentifier(x) at 23:26\n; at 23:27\nsizeof at 23:29\n( at 23:35\nIdentifier(x) at 23:36\n) at 23:37\n; at 23:38\n} at 23:40\n) at 23:41\n, at 23:42\nStringLiteral(\"({ long long 8; sizeof(8); })\") at 23:44\n) at 23:75\n; at 23:76\nIdentifier(assert) at 25:3\n( at 25:9\nIntLiteral(0, None) at 25:10\n, at 25:11\n( at 25:13\n{ at 25:14\nIdentifier(_Bool) at 25:16\nIdentifier(x) at 25:22\n= at 25:23\nIntLiteral(0, None) at 25:24\n; at 25:25\nIdentifier(x) at 25:27\n; at 25:28\n} at 25:30\n) at 25:31\n, at 25:32\nStringLiteral(\"({ _Bool 0=0; 0; })\") at 25:34\n) at 25:55\n; at 25:56\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(1, None) at 26:10\n, at 26:11\n( at 26:13\n{ at 26:14\nIdentifier(_Bool) at 26:16\nIdentifier(x) at 26:22\n= at 26:23\nIntLiteral(1, None) at 26:24\n; at 26:25\nIdentifier(x) at 26:27\n; at 26:28\n} at 26:30\n) at 26:31\n, at 26:32\nStringLiteral(\"({ _Bool 1=1; 1; })\") at 26:34\n) at 26:55\n; at 26:56\nIdentifier(assert) at 27:3\n( at 27:9\nIntLiteral(1, None) at 27:10\n, at 27:11\n( at 27:13\n{ at 27:14\nIdentifier(_Bool) at 27:16\nIdentifier(x) at 27:22\n= at 27:23\nIntLiteral(2, None) at 27:24\n; at 27:25\nIdentifier(x) at 27:27\n; at 27:28\n} at 27:30\n) at 27:31\n, at 27:32\nStringLiteral(\"({ _Bool 1=2; 1; })\") at 27:34\n) at 27:55\n; at 27:56\nIdentifier(assert) at 28:3\n( at 28:9\nIntLiteral(1, None) at 28:10\n, at 28:11\n( at 28:13\nIdentifier(_Bool) at 28:14\n) at 28:19\nIntLiteral(1, None) at 28:20\n, at 28:21\nStringLiteral(\"(_Bool)1\") at 28:23\n) at 28:33\n; at 28:34\nIdentifier(assert) at 29:3\n( at 29:9\nIntLiteral(1, None) at 29:10\n, at 29:11\n( at 29:13\nIdentifier(_Bool) at 29:14\n) at 29:19\nIntLiteral(2, None) at 29:20\n, at 29:21\nStringLiteral(\"(_Bool)2\") at 29:23\n) at 29:33\n; at 29:34\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(0, None) at 30:10\n, at 30:11\n( at 30:13\nIdentifier(_Bool) at 30:14\n) at 30:19\n( at 30:20\nchar at 30:21\n) at 30:25\nIntLiteral(256, None) at 30:26\n, at 30:29\nStringLiteral(\"(_Bool)(char)256\") at 30:31\n) at 30:49\n; at 30:50\nIdentifier(printf) at 32:3\n( at 32:9\nStringLiteral(\"OK\n\") at 32:10\n) at 32:16\n; at 32:17\nreturn at 33:3\nIntLiteral(0, None) at 33:10\n; at 33:11\n} at 34:1\nEOF at 35:1\n"
stderr: ""
status: 0
