tests/snapshots/tokenize__do_while_basic.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(i) at 2:9\n= at 2:11\nIntLiteral(0, None) at 2:13\n; at 2:14\nint at 3:5\nIdentifier(sum) at 3:9\n= at 3:13\nIntLiteral(0, None) at 3:15\n; at 3:16\ndo at 4:5\n{ at 4:8\nIdentifier(sum) at 5:9\n= at 5:13\nIdentifier(sum) at 5:15\n+ at 5:19\nIdentifier(i) at 5:21\n; at 5:22\nIdentifier(i) at 6:9\n= at 6:11\nIdentifier(i) at 6:13\n+ at 6:15\nIntLiteral(1, None) at 6:17\n; at 6:18\n} at 7:5\nwhile at 7:7\n( at 7:13\nIdentifier(i) at 7:14\n< at 7:16\nIntLiteral(5, None) at 7:18\n) at 7:19\n; at 7:20\nreturn at 8:5\nIdentifier(sum) at 8:12\n; at 8:15\n} at 9:1\nEOF at 10:1\n"
stderr: ""
status: 0
