tests/snapshots/tokenize__do_while_nested.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(i) at 2:9\n= at 2:11\nIntLiteral(0) at 2:13\n; at 2:14\nint at 3:5\nIdentifier(j) at 3:9\n= at 3:11\nIntLiteral(0) at 3:13\n; at 3:14\nint at 4:5\nIdentifier(sum) at 4:9\n= at 4:13\nIntLiteral(0) at 4:15\n; at 4:16\ndo at 5:5\n{ at 5:8\nIdentifier(j) at 6:9\n= at 6:11\nIntLiteral(0) at 6:13\n; at 6:14\ndo at 7:9\n{ at 7:12\nIdentifier(sum) at 8:13\n= at 8:17\nIdentifier(sum) at 8:19\n+ at 8:23\nIntLiteral(1) at 8:25\n; at 8:26\nIdentifier(j) at 9:13\n= at 9:15\nIdentifier(j) at 9:17\n+ at 9:19\nIntLiteral(1) at 9:21\n; at 9:22\n} at 10:9\nwhile at 10:11\n( at 10:17\nIdentifier(j) at 10:18\n< at 10:20\nIntLiteral(2) at 10:22\n) at 10:23\n; at 10:24\nIdentifier(i) at 11:9\n= at 11:11\nIdentifier(i) at 11:13\n+ at 11:15\nIntLiteral(1) at 11:17\n; at 11:18\n} at 12:5\nwhile at 12:7\n( at 12:13\nIdentifier(i) at 12:14\n< at 12:16\nIntLiteral(3) at 12:18\n) at 12:19\n; at 12:20\nreturn at 13:5\nIdentifier(sum) at 13:12\n; at 13:15\n} at 14:1\nEOF at 15:1\n"
stderr: ""
status: 0
