tests/snapshots/tokenize__do_while_once.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(x) at 2:9\n= at 2:11\nIntLiteral(0, None) at 2:13\n; at 2:14\ndo at 3:5\n{ at 3:8\nIdentifier(x) at 4:9\n= at 4:11\nIdentifier(x) at 4:13\n+ at 4:15\nIntLiteral(10, None) at 4:17\n; at 4:19\n} at 5:5\nwhile at 5:7\n( at 5:13\nIntLiteral(0, None) at 5:14\n) at 5:15\n; at 5:16\nreturn at 6:5\nIdentifier(x) at 6:12\n; at 6:13\n} at 7:1\nEOF at 8:1\n"
stderr: ""
status: 0
